--- a/cart/templates/cart/view_cart.html
+++ b/cart/templates/cart/view_cart.html
@@ -1,48 +1,51 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <table class="table">
-        
-            <thead>
-                <tr>
-                    <th></th>    
-                    <th>Product</th>    
-                    <th>Quantity</th>    
-                    <th>Price</th>
-                    <th>Total</th> 
-                    <th></th>
-                </tr>
-            </thead>
-            
-            <tbody>
-                
-            {% for item in cart_items %}
-                <tr>
-                    <td><img src="{{ MEDIA_URL }}{{ item.image}}" alt="" width="100" height="100"/></td>    
-                    <td>{{ item.name }}</td>    
-                    <td>{{ item.quantity }}</td>    
-                    <td>€{{ item.price }}</td>
-                    <td>€{{ item.total }}</td>
-                    <td><form method="post" action="#">
-                        {% csrf_token %}
-                        <input type="submit" class="btn btn-success" value="Remove"/>
-                        </form>
-                    </td>
-                </tr>
-            {% endfor %}
-    
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td><strong>Total:</strong></td>
-                <td><strong>€300</strong></td>
-                <td></td>
-            </tr>
-        </tbody>
-    
-    </table>
 
-    <a href="#" class="btn btn-success" role="button">Checkout</a>
+{% if items_in_cart > 0 %}
+<table class="table">
+    <thead>
+        <tr>
+            <th></th>    
+            <th>Product</th>    
+            <th>Quantity</th>    
+            <th>Price</th>
+            <th>Total</th> 
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        
+        {% for item in cart_items %}
+        <tr>
+            <td><img src="{{ MEDIA_URL }}{{ item.image}}" width="100" height="100"/></td>    
+            <td>{{ item.name }}</td>    
+            <td>{{ item.quantity }}</td>    
+            <td>€{{ item.price }}</td>
+            <td>€{{ item.total }}</td>
+            <td><form method="post" action="{% url 'remove_from_cart' %}">
+                {% csrf_token %}
+                <input type="hidden" name="product" value="{{ item.id }}" />
+                <input type="submit" class="btn btn-success" value="Remove"/>
+                </form>
+            </td>
+        </tr>
+        {% endfor %}
+
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td><strong>Total:</strong></td>
+            <td><strong>€{{ cart_total }}</strong></td>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
+
+<a href="{% url 'show_checkout' %}" class="btn btn-success" role="button">Checkout</a>
+{% else %}
+    <p>You have nothing in your cart.</p>
+{% endif %}
 
 {% endblock %}
