--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -7,7 +7,7 @@
             
                 {% for product in products %}
                     <div class="col-sm-4 col-lg-4 col-md-4">
-                        <div class="thumbnail">
+                        <div class="thumbnail" style="width: 35rem; height: 50rem;">
                             <img src="{{MEDIA_URL}}{{product.image}}" alt="">
                             <div class="caption">
                                 <h4 class="pull-right">€{{product.price}}</h4>
